RESOLVED FIXED204378
Fix null deref when a DocumentLoader's policy decision is delivered
https://bugs.webkit.org/show_bug.cgi?id=204378
Summary Fix null deref when a DocumentLoader's policy decision is delivered
Brady Eidson
Reported 2019-11-19 14:33:47 PST
Fix null deref when a DocumentLoader's policy decision is delivered Don't know how to reproduce this, but have crash log data. <rdar://problem/54847830>
Attachments
Patch (1.70 KB, patch)
2019-11-19 14:45 PST, Brady Eidson
no flags
Radar WebKit Bug Importer
Comment 1 2019-11-19 14:34:07 PST
Brady Eidson
Comment 2 2019-11-19 14:45:21 PST
WebKit Commit Bot
Comment 3 2019-11-19 16:12:13 PST
Comment on attachment 383906 [details] Patch Clearing flags on attachment: 383906 Committed r252653: <https://trac.webkit.org/changeset/252653>
WebKit Commit Bot
Comment 4 2019-11-19 16:12:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.