Fix null deref when a DocumentLoader's policy decision is delivered. <rdar://problem/54847830> and https://bugs.webkit.org/show_bug.cgi?id=204378

Reviewed by Ryosuke Niwa.

Definitely a required null check, as all async entries into DocumentLoader should (and most do!)

No new tests, as no steps to reproduce are known.

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::continueAfterContentPolicy): Null check m_frame.


Canonical link: https://commits.webkit.org/217645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252653 268f45cc-cd09-0410-ab3c-d52691b4dbfc